--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
   "devDependencies": {
     "autoprefixer": "^10.4.16",
     "postcss": "^8.4.31",
+    "solid-devtools": "^0.29.3",
     "tailwindcss": "^3.3.5",
     "typescript": "^5.2.2",
     "vite": "^4.5.0",
