--- a/backend/app/pyproject.toml
+++ b/backend/app/pyproject.toml
@@ -23,6 +23,7 @@ psycopg2-binary = "^2.8.5"
 alembic = "^1.4.2"
 sqlalchemy = "^1.3.16"
 pytest = "^5.4.1"
+openai = "^1.14.2"
 python-jose = {extras = ["cryptography"], version = "^3.1.0"}
 
 [tool.poetry.dev-dependencies]
